styles.css
@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;600;700;800&display=swap");

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family:Epilogue;
   
}


html {
    scroll-behavior: smooth;
  }

/* border: solid;;
border-width:2px;
border-color: black; */





nav{
    display: flex;
    justify-content: flex-end;

    width: 100vw;
    padding: 30px 0 0 0;
    margin-top: 10px;
  
}


nav ul{
    margin-top: 10px;
    display: flex;
    justify-content: space-between;
    list-style: none;

    gap:20px;
}

nav li{
    color:black;
    font-size:1.1vw;
    margin-right: 40px;
}

nav ul a{
    text-decoration: underline;
    text-decoration-color: transparent;

    transition: 0.7s;

}

nav ul a:hover{
    
    text-decoration-color: #26303C;

}






.home{
    margin: auto;
    margin-top:10vh;
    margin-bottom: 25vh;

    padding:25px;

    gap:4vw;

    display:flex;

    justify-content: center;
    align-items: center;


    height:auto;
    width:85vw;


}

.info{
    display: flex;
    flex:0 1 1;
    flex-direction: column;


    min-width: 250px;

    justify-content: center;
    gap:25px;
    

    width: 35vw;
    height:60vh;


}

.info h4{
    font-size: 2vw;

}

.info h1{
    font-weight: 800 ;
    font-size: 5vw;
    text-shadow: 3px 2px 2px rgba(128, 128, 128, 0.32);

}

.info h3{
    font-size: 1.5vw;
}

.info p{
    font-size: 1.1vw;
}

.info button{
    height:3.6vw;
    width:12vw;

    border-radius: 25px;;
    background-color: #12202D;

    color: white;
    font-size: 2vh;
    font-weight: 800;

    border: solid;
    border-color: #12202D;
    border-width: 2px;

    cursor: pointer;

    transition: 0.5s;

}


.info button:hover{

    transform: translate(0px, -7px);

}

.relative{
    position: relative;
}

.relative .dots{
    height: 22vh;
    width: auto;

    position: absolute;
    z-index: -1;

    top:-70px;
    left:-80px;
}

.photo{
    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;


    width: 27vw;
    height: 52vh;


}

.photo img{
    height: 60vh;
    width: auto;

    border-radius: 65px
}






.skills{
    display: flex;
    flex-direction: column;
    padding-top:8vh;
    background-color: white;

}



.grid-container {
    display: grid;

    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto auto auto auto;

    justify-content: space-evenly;
    
    width: 75vw;
    height: auto;

    margin: auto;

    margin-bottom: 20vh;

    border: solid;
    border-width: 2px;
    border-color: black;

    border-radius: 10px;;

    box-shadow: rgba(0, 0, 0, 0.25) 0px 24px 38px, rgba(0, 0, 0, 0.22) 0px 10px 10px;

    padding: 50px;
    row-gap: 6vh;
    column-gap: 0vh;
}

.grid-container h2{

    justify-self: center;
    align-self: center;


    font-size: 5vw;
    margin: auto;
    grid-column: 1/5;



}

.grid-container hr{
    grid-column: 1/5;

    border-top: 3px solid #000000
}


.grid-container h1{

    font-size: 1.5vw;
    margin: auto;

    
}


.card{

    padding: 10px;;

    border: solid;
    border-width: 4px;
    border-color: black;

    border-radius: 30px;

    
    box-shadow: 12px 12px rgba(0, 0, 0, 1);
    /* rgb is to give box shadow color 0,0,0 and 1 is opacity  */



    height: 8vw;
    width: 8vw;

    transition: 0.5s;



}

.card img{

    height: 100%;
    width: 100%
}

.card:hover{
    transform: translate(0px, -7px);

}




.projects{
    margin: auto;
    margin-bottom: 25vh;

    padding:25px;

    display:flex;
    flex-direction: column;
    

    justify-content: center;
    align-items: center;

    gap:12vh;


    height:auto;
    width:100%;

    border-radius: 25px; 
    

}

.projects h1{
    font-size: 4.5vw;
}

.projectrow{
    display:flex;
    flex-direction: row;

    width: 100%;

    justify-content: center;
    align-items: center;



}

.projectrow img{
    height:50%;
    width:50%;

}




.projectcol{
    display:flex;
    flex-direction: column;

    height:20vw;
    width:30vw;
    justify-content:space-evenly;
    align-items:flex-start;


}


.projectcol h1{
    color: #12202D;

    font-size: 3vw;
}

.projectcol p{
    font-size:1.2vw;
    line-height: 1.2;
}

.projectcol button{
    height:7vh;
    width:12vw;

    border-radius: 25px;;
    background-color: #12202D;

    color: white;
    font-size: 2vh;
    font-weight: 800;

    border: solid;
    border-color: #12202D;
    border-width: 2px;

    cursor: pointer;
    transition: 0.5s;

}

.projectcol button:hover{

    transform: translate(0px, -7px);

}


#github{
    background-color: white;
    background-image: 
    url("https://cdn-icons-png.flaticon.com/512/25/25231.png") 100% 100%;
    height: 3.2vw;
    width: 3.2vw;
    border-radius: 50%;
    margin-left: 1vw;

    cursor: pointer;
    transition: 0.5s;

}

#github:hover{
    transform: translate(0px, -7px);
}

